es: setup traslated

--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Prepare your dev environment
+title: Prepare su entorno de desarrollo
 description: |-
-  Tutorial: Build your first Astro blog —
-  Install the local tools that you’ll need to complete the tutorial
+  Tutorial: Crea tu primer blog Astro —
+  Instala las herramientas locales que necesitarás para completar el tutorial
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -15,22 +15,22 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Install any tools that you will use to build your Astro website
+  - Instala cualquier herramienta que vayas a utilizar para crear tu sitio web Astro.
 </PreCheck>
 
-## Get the dev tools you need
+## Obtenga las herramientas de desarrollo que necesita
 
 ### Terminal
 
-You will use a **command line (terminal)** to create your Astro project and to run key commands to build, develop, and test your site.
+Utilizarás una **línea de comandos (terminal)** para crear tu proyecto Astro y ejecutar comandos clave para construir, desarrollar y probar tu sitio.
 
-You can access the command line through a local terminal program for your operating system. Common applications include **Terminal** (MacOS/Linux), **Command Prompt** (Windows), and **Termux** (Android). One of these will probably already be on your machine. 
+Puedes acceder a la línea de comandos a través de un programa de terminal local para tu sistema operativo. Las aplicaciones más comunes son **Terminal** (MacOS/Linux), **Instructor de comandos** (Windows) y **Termux** (Android). Es probable que alguna de estas aplicaciones ya esté instalada en tu ordenador. 
 
 ### Node.js
 
-For Astro to run on your system, you will also need to have [**Node.js**](https://nodejs.org/en/) installed, version `v16.12.0` or later.
+Para que Astro funcione en tu sistema, también necesitarás tener instalado [**Node.js**](https://nodejs.org/en/), versión `v16.12.0` o posterior.
 
-To check to see whether you already have a compatible version installed, run the following command in your terminal:
+Para comprobar si ya tiene instalada una versión compatible, ejecute el siguiente comando en su terminal:
 
 ```sh
 node -v
@@ -39,33 +39,33 @@ node -v
 v16.14.0
 ```
 
-If the command returns a version number higher than `v16.12.0`, you're good to go!
+Si el comando devuelve un número de versión superior a `v16.12.0`, ¡ya está!
 
-If the command returns an error message like `Command 'node' not found`, or a version number lower than `v16.12.0`, then you need to [install a compatible Node.js version](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
+Si el comando devuelve un mensaje de error como `Command 'node' not found`, o un número de versión inferior a `v16.12.0`, entonces necesitas [instalar una versión compatible de Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm).
 
-### Code Editor
+### Editor de código
 
-Additionally, you will need to download and install a **code editor** to write your code. 
+Además, tendrás que descargar e instalar un **editor de código** para escribir tu código. 
 
-:::tip[we'll use...]
-This tutorial will use **VS Code**, but you can use any editor for your operating system.
+:::tip[usaremos...]
+Este tutorial utilizará **VS Code**, pero puede utilizar cualquier editor para su sistema operativo.
 :::
 
-1. [Download and install VS Code](https://code.visualstudio.com/#alt-downloads) or another code editor of your choice. 
+1. [Descargue e instale VS Code](https://code.visualstudio.com/#alt-downloads) u otro editor de código de su elección. 
 
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-Which of the following is...
-1. A code editor, for making changes to your files and their content?
+¿Cuál de las siguientes es...
+1. Un editor de código para modificar los archivos y su contenido?
 
     <MultipleChoice>
       <Option>
-        web browser
+        navegador web
       </Option>
       <Option>
         Terminal
@@ -75,7 +75,7 @@ Which of the following is...
       </Option>
     </MultipleChoice>
 
-2. An online version control provider for your repository?
+2. ¿Un proveedor de control de versiones en línea para su repositorio?
 
     <MultipleChoice>
       <Option isCorrect>
@@ -89,7 +89,7 @@ Which of the following is...
       </Option>
     </MultipleChoice>
 
-3. An application for running commands?
+3. ¿Una aplicación para ejecutar comandos?
     <MultipleChoice>
       <Option>
         GitHub
@@ -98,23 +98,23 @@ Which of the following is...
         Terminal
       </Option>
       <Option>
-        web browser
+        navegador web
       </Option>
     </MultipleChoice>
 
 </Box>
 
 <Box icon="check-list">
-## Checklist for moving on
+## Checklist para seguir adelante
 
 <Checklist>
-- [ ] I can access the command line in a terminal.
-- [ ] I have Node.js installed.
-- [ ] I have a code editor like VS Code.
+- [ ] Puedo acceder a la línea de comandos en un terminal.
+- [ ] Tengo Node.js instalado.
+- [ ] Tengo un editor de código como VS Code.
 </Checklist>
 </Box>
 
 
-### Resources
+### Recursos
 
-- <p>[FreeCodeCamp.org](https://freecodecamp.org) <Badge>external</Badge> — a free educational site with full courses or quick refreshers in HTML, CSS, JS, and more.</p>
+- <p>[FreeCodeCamp.org](https://freecodecamp.org) <Badge>externo</Badge> — un sitio educativo gratuito con cursos completos o de repaso rápido sobre HTML, CSS, JS y mucho más.</p>
