--- a/src/content/docs/es/tutorial/1-setup/4.mdx
+++ b/src/content/docs/es/tutorial/1-setup/4.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Store your repository online
+title: Almacene su repositorio en línea
 description: |-
-  Tutorial: Build your first Astro blog —
-  Create a GitHub repo for your tutorial project
+  Tutorial: Crea tu primer blog Astro —
+  Crea un repositorio de GitHub para tu proyecto tutorial
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -13,51 +13,51 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Put your project repository online
+  - Ponga en línea su repositorio de proyectos
 </PreCheck>
 
-This tutorial will use GitHub to store our repository and connect to a web host. You are welcome to use the online git provider of your choice.
+Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse a un host web. Te invitamos a utilizar el proveedor de git en línea de su elección.
 
-:::note
-If you are already familiar with git and have your own workflow, then create a new GitHub repository for your project using your preferred method. Skip ahead to the next page: ["Deploy your Site to the Web"](/en/tutorial/1-setup/5/).
+:::nota
+Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un nuevo repositorio de GitHub para tu proyecto utilizando el método que prefieras. Pasa a la página siguiente: ["Despliegue de su sitio en la Web"](/es/tutorial/1-setup/5/).
 :::
 
-## Create a repository on GitHub
+## Crear un repositorio en GitHub
 
-Although there are a few ways to get your local code stored in GitHub, this tutorial will guide you through a method that does not require using git in the command line. 
+Aunque hay algunas maneras de obtener su código local almacenado en GitHub, este tutorial le guiará a través de un método que no requiere el uso de git en la línea de comandos. 
 
-1. Log in to GitHub.com in a browser and click the <kbd>+</kbd> in the upper right of the screen to make a new repository. 
+1. Accede a GitHub.com en un navegador y haz clic en el <kbd>+</kbd> de la parte superior derecha de la pantalla para crear un nuevo repositorio. 
 
-2. Choose a name for your repository. This does not have to be the same name as your project folder.
+2. Elija un nombre para su repositorio. No tiene por qué ser el mismo nombre que la carpeta del proyecto.
 
-3. You will be presented with options, but you do not need to change any of the defaults. Scroll down and click the button to <kbd>Create Repository</kbd>.
+3. Se le presentarán opciones, pero no necesita cambiar ninguna de las predeterminadas. Desplácese hacia abajo y pulse el botón <kbd>Create Repository</kbd>.
 
-4. You will be presented with various setup next steps, but you won't need to use any of them. Make a note of the URL of your repository. You can now exit this page without doing anything.
-
-
-## Commit your local code to GitHub
-
-In the last section, you made a change to your page's content. This means that your project files have changed, and VS Code should show a number on top of the "Source" menu icon. This source tab is where you will regularly go to update your files on GitHub.
+4. Se le presentarán varios pasos de configuración, pero no necesitará utilizar ninguno de ellos. Anote la URL de su repositorio. Ahora puede salir de esta página sin hacer nada.
 
 
-1. Click the Source Control tab in your VS Code to see a list of files that have changed. If you see a message that you need to install `git`, follow the instructions provided, then reload VS Code.
+## Compila tu código local en GitHub
 
-2. Click the <kbd>•••</kbd> "3 dots" menu above the commit message and choose <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
-
-3. Select <kbd>Add remote from GitHub</kbd>. If necessary, follow any authentication steps then return to VS Code and repeat this action.
-
-4. You should see a list of all your repositories on GitHub. Choose the one you created for this project. If you don't see your project, paste in its GitHub URL directly. You may also be asked to give this repository a local name. You can select any name you like.
-
-5. At the top of the menu pane, there will be a place to enter a **commit message** (description of your file changes). Type in `initial commit` and press the <kbd>Commit</kbd> button to commit these changes.
-
-7. You may see a message telling you that you have no "staged" commits, and asking you if you want to stage them. Click <kbd>Always</kbd> and continue.
-
-8. Lastly, the list of changed files should be replaced with a <kbd>Publish</kbd> button. Click this to send your committed changes to GitHub.
+En la última sección, usted hizo un cambio en el contenido de su página. Esto significa que los archivos de tu proyecto han cambiado, y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es donde irás regularmente para actualizar tus archivos en GitHub.
 
 
-### See your project on GitHub
+1. Haga clic en la pestaña Control de código fuente en su VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, siga las instrucciones que se proporcionan y, a continuación, vuelva a cargar VS Code.
 
-To verify that your project is successfully stored on GitHub, visit GitHub.com and look under your account for a list of your repositories. Choose the new one you created, and verify that it contains your Astro project files.
+2. Haga clic en el menú <kbd>•••</kbd> "3 puntos" situado encima del mensaje de confirmación y seleccione <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
+
+3. Seleccione <kbd>Add Remote from GitHub</kbd>. Si es necesario, siga los pasos de autenticación y, a continuación, vuelva a VS Code y repita esta acción.
+
+4. Deberías ver una lista de todos tus repositorios en GitHub. Elige el que creaste para este proyecto. Si no ves tu proyecto, pega directamente su URL de GitHub. Puede que también se te pida que le des un nombre local a este repositorio. Puedes seleccionar el nombre que quieras.
+
+5. En la parte superior del panel de menú, habrá un lugar para introducir un **commit message** (descripción de los cambios de su archivo). Escriba `initial commit` y pulse el botón <kbd>Commit</kbd> para confirmar los cambios.
+
+7. Puede que aparezca un mensaje diciéndote que no tienes "staged" commits, y preguntándote si quieres escanearlos. Haz clic en<kbd>Always</kbd> y continúa.
+
+8. Por último, la lista de archivos modificados debería sustituirse por un botón <kbd>Publish</kbd>. Haz click en él para enviar los cambios confirmados a GitHub.
+
+
+### Vea su proyecto en GitHub
+
+Para verificar que tu proyecto está almacenado correctamente en GitHub, visita GitHub.com y busca en tu cuenta una lista de tus repositorios. Elige el nuevo que has creado y comprueba que contiene los archivos de tu proyecto Astro.
 
 
 
@@ -66,10 +66,10 @@ To verify that your project is successfully stored on GitHub, visit GitHub.com a
 ## Checklist
 
 <Checklist>
-- [ ] I have stored my project on GitHub.
+- [ ] He almacenado mi proyecto en GitHub.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- <p>[Using Git Source control in VS Code](https://code.visualstudio.com/docs/sourcecontrol/overview#_git-support) <Badge>external</Badge></p>
+- <p>[Uso de Git Source control en VS Code](https://code.visualstudio.com/docs/sourcecontrol/overview#_git-support) <Badge>externo</Badge></p>
