--- a/src/content/docs/es/tutorial/1-setup/5.mdx
+++ b/src/content/docs/es/tutorial/1-setup/5.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Deploy your site to the web
+title: Despliegue de su sitio en la web
 description: |-
-  Tutorial: Build your first Astro blog —
-  Connect your tutorial project's GitHub repo to Netlify and deploy to the web
+  Tutorial: Crea tu primer blog Astro —
+  Conecta el repositorio GitHub de tu proyecto tutorial a Netlify y despliégalo en la web
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -15,57 +15,57 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Add your GitHub repository as a new Netlify app
-  - Deploy your Astro site to the web
+  - Añade tu repositorio GitHub como una nueva aplicación Netlify
+  - Despliegue de su sitio Astro en la web
 </PreCheck>
 
-Here, you will connect your GitHub repository to Netlify. Netlify will use that project to build and deploy your site live on the web every time you commit a change to your code. 
+Aquí, conectarás tu repositorio de GitHub a Netlify. Netlify utilizará ese proyecto para construir y desplegar tu sitio en vivo en la web cada vez que confirmes un cambio en tu código. 
 
-:::tip[we'll use...]
-This tutorial will use **Netlify**, but you are welcome to use your preferred hosting service for deploying your site to the internet.
+:::tip[usaremos...]
+Este tutorial utilizará **Netlify**, pero le invitamos a utilizar su servicio de alojamiento preferido para desplegar su sitio en Internet.
 :::
 
-## Create a new Netlify site
+## Crear un nuevo sitio Netlify
 
-1. Create a free account at [Netlify](https://netlify.com) if you do not already have one.
+1. Cree una cuenta gratuita en [Netlify](https://netlify.com) si aún no tiene una.
 
-    Make a note of your username. You will view your dashboard and any sites you create at `https://app.netlify.com/teams/username`
+    Anote su nombre de usuario. Verá su panel de control y los sitios que cree en `https://app.netlify.com/teams/username`.
 
-2. Click <kbd>Add new site</kbd> > <kbd>Import an existing project</kbd>.
+2. Click en <kbd>Añadir nuevo sitio</kbd> > <kbd>Importar un proyecto existente</kbd>.
 
-    You will be asked to connect to a Git provider. Choose GitHub and follow the steps onscreen to authenticate your GitHub account. Then, choose your Astro project's GitHub repository from the list provided.
+    Se te pedirá que te conectes a un proveedor de Git. Elige GitHub y sigue los pasos que aparecen en pantalla para autenticar tu cuenta de GitHub. A continuación, elige el repositorio GitHub de tu proyecto Astro de la lista proporcionada.
 
-3. At the final step, Netlify will show you your app's site settings. The defaults should be correct for your Astro project, so you can scroll down and click <kbd>Deploy site</kbd>.
+3. En el último paso, Netlify le mostrará la configuración del sitio de su aplicación. Los valores predeterminados deben ser correctos para tu proyecto Astro, así que puedes desplazarte hacia abajo y hacer click en <kbd>Desplegar sitio</kbd>.
 
-Congratulations, you have an Astro website!
+Enhorabuena, ¡tienes una web Astro!
 
-## Change your project name
+## Cambiar el nombre del proyecto
 
-On your site's overview page in Netlify, you will see your randomly-generated project name, and your website URL of the form `https://project-name-123456.netlify.app`. You can change your project name to something more memorable, and this will automatically update your URL.
+En la página de resumen de su sitio en Netlify, verá el nombre de su proyecto generado aleatoriamente, y la URL de su sitio web de la forma `https://project-name-123456.netlify.app`. Puede cambiar el nombre de su proyecto por algo más memorable, y esto actualizará automáticamente su URL.
 
-## Visit your new website
+## Visite su nuevo sitio web
 
-Click on the URL in your site settings, or type it into a browser window to view your new website.
+Haga clic en la URL en la configuración de su sitio, o escríbala en una ventana del navegador para ver su nuevo sitio web.
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
 
 
-You want to update the home page of your existing website. What steps do you take?
+Quiere actualizar la página de inicio de su sitio web actual. ¿Qué pasos debe seguir?
 
   <MultipleChoice>
     <Option>
-      I open a terminal, run `create astro`, and then visit my Netlify URL.
+      Abro un terminal, ejecuto `create astro`, y luego visito mi URL de Netlify.
     </Option>
     <Option>
-      I change a setting in my Netlify app, then fork a new Astro project on StackBlitz.
+      Cambio una configuración en mi aplicación Netlify, luego hago un fork nuevo del proyecto Astro en StackBlitz.
     </Option>
     <Option isCorrect>
-      I make an edit to `index.astro`. I commit and push my changes to GitHub. Netlify will handle the rest!
+      Edito `index.astro`. Confirmo y envío mis cambios a GitHub. Netlify se encargará del resto.
     </Option>
   </MultipleChoice>
  </Box>
@@ -74,11 +74,11 @@ You want to update the home page of your existing website. What steps do you tak
 ## Checklist
 
 <Checklist>
-- [ ] I can view my updated website online.
-- [ ] I'm ready to get back to coding!
+- [ ] Puedo ver mi sitio web actualizado en línea.
+- [ ] Estoy listo para volver a codificar.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- <p>[A step-by-step guide to deploying on Netlify](https://www.netlify.com/blog/2016/09/29/a-step-by-step-guide-deploying-on-netlify/) <Badge>external</Badge></p>
+- <p>[Guía paso a paso para desplegar en Netlify](https://www.netlify.com/blog/2016/09/29/a-step-by-step-guide-deploying-on-netlify/) <Badge>externo</Badge></p>
