--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Create your first Astro project
+title: Cree su primer proyecto Astro
 description: |-
-  Tutorial: Build your first Astro blog —
-  Create a new project for the Astro tutorial and get ready to code
+  Tutorial: Crea tu primer blog Astro —
+  Crea un nuevo proyecto para el tutorial de Astro y prepárate para codificar
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -15,83 +15,83 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Run the `create astro` setup wizard to create a new Astro project
-  - Start the Astro server in development (dev) mode
-  - View a live preview of your website in your browser
+  - Ejecute el asistente de configuración `create astro` para crear un nuevo proyecto Astro
+  - Iniciar el servidor Astro en modo de desarrollo (dev)
+  - Vea una vista previa en directo de su sitio web en su navegador
 </PreCheck>
 
-## Launch the Astro setup wizard
+## Inicie el asistente de configuración de Astro
 
-The preferred way to create a new Astro site is through our `create astro` setup wizard.
+La forma preferida de crear un nuevo sitio Astro es a través de nuestro asistente de configuración `create astro`.
 
-1. In the command line of your terminal, run the following command using your preferred package manager:
+1. En la línea de comandos de su terminal, ejecute el siguiente comando utilizando su gestor de paquetes preferido:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
       ```shell
-      # create a new project with npm
+      # crear un nuevo proyecto con npm
       npm create astro@latest
       ```
       </Fragment>
       <Fragment slot="pnpm">
       ```shell
-      # create a new project with pnpm
+      # crear un nuevo proyecto con pnpm
       pnpm create astro@latest
       ```
       </Fragment>
       <Fragment slot="yarn">
       ```shell
-      # create a new project with yarn
+      # crear un nuevo proyecto con yarn
       yarn create astro
       ```
       </Fragment>
     </PackageManagerTabs>
 
-2. Confirm `y` to install `create-astro`
-3. When the prompt asks, "Where would you like to create your new project?" type in the name of a folder to create a new directory for your project, e.g.
+2. Confirme `y` para instalar `create-astro`.
+3. Cuando se le pregunte "¿Dónde desea crear su nuevo proyecto?", escriba el nombre de una carpeta para crear un nuevo directorio para su proyecto, por ejemplo
 `./tutorial`
 
-    :::note
-    A new Astro project can only be created in a completely empty folder, so choose a name for your folder that does not already exist!
+    :::nota
+    Un nuevo proyecto Astro sólo puede crearse en una carpeta completamente vacía, así que elige un nombre para tu carpeta que no exista ya.
     :::
 
-4. You will see a short list of starter templates to choose from. Use the arrow keys (up and down) to navigate to the "Empty" template, and then press return (enter) to submit your choice. 
+4. Verás una pequeña lista de plantillas de inicio entre las que puedes elegir. Utilice las teclas de flecha (arriba y abajo) para navegar hasta la plantilla "Vacío" y, a continuación, pulse return (Enter) para enviar su elección. 
 
-5. When the prompt asks, "Would you like to install dependencies?" type `y`.
+5. Cuando aparezca la pregunta "¿Desea instalar las dependencias?", escriba `y`.
 
-6. When the prompt asks you if you plan on writing TypeScript, type `n`. 
+6. Cuando el prompt te pregunte si planeas escribir TypeScript, teclea `n`. 
 
-7. When the prompt asks, "Would you like to initialize a new git repository?" type `y`.
+7. Cuando se le pregunte: "¿Desea inicializar un nuevo repositorio git?", escriba `y`.
 
-When the install wizard is complete, you no longer need this terminal. You can now open VS Code to continue.
+Cuando finalice el asistente de instalación, ya no necesitará este terminal. Ahora puede abrir VS Code para continuar.
 
-## Open your project in VS Code
+## Abra su proyecto en VS Code
 
-1. Open VS Code. You will be prompted to open a folder. Choose the folder that you created during the setup wizard.
+1. Abra VS Code. Se le pedirá que abra una carpeta. Elija la carpeta que creó durante el asistente de instalación.
 
-2. If this is your first time opening an Astro project, you should see a notification asking if you would like to install recommended extensions. Click to see the recommended extensions, and choose the [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). This will provide syntax highlighting and autocompletions for your Astro code.
+2. Si es la primera vez que abre un proyecto Astro, debería ver una notificación preguntándole si desea instalar las extensiones recomendadas. Haz clic para ver las extensiones recomendadas y elige [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). Esto proporcionará resaltado de sintaxis y autocompletado para tu código Astro.
 
-3. Make sure the terminal is visible and that you can see the command prompt, such as:
+3. Asegúrese de que el terminal está visible y de que puede ver el símbolo del sistema, por ejemplo:
 
     ```sh
     user@machine:~/tutorial$
     ```
 
-    :::tip[Keyboard shortcut]
-    To toggle the visibility of the terminal, use <kbd>Ctrl + J</kbd> (macOS: <kbd>Cmd ⌘ + J</kbd>).
+    :::tip[Atajo de teclado]
+    Para cambiar la visibilidad del terminal, utilice <kbd>Ctrl + J</kbd> (macOS: <kbd>Cmd ⌘ + J</kbd>).
     :::
 
-You can now use the terminal built right into this window, instead of your computer's Terminal app, for the rest of this tutorial.
+Ahora puede utilizar el terminal integrado en esta ventana, en lugar de la aplicación Terminal de su ordenador, para el resto de este tutorial.
 
 
 
-## Run Astro in dev mode
+## Ejecutar Astro en modo de desarrollo
 
-In order to preview your project files _as a website_ while you work, you will need Astro to be running in development (dev) mode.
+Para poder previsualizar los archivos de tu proyecto _como un sitio web_ mientras trabajas, necesitarás que Astro se ejecute en modo desarrollo (dev).
 
-### Start the dev server
+### Iniciar el servidor de desarrollo
 
-1. Run the command to start the Astro dev server by typing into VS Code's terminal:
+1. Ejecute el comando para iniciar el servidor Astro dev escribiendo en el terminal de VS Code:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
@@ -111,38 +111,38 @@ In order to preview your project files _as a website_ while you work, you will n
       </Fragment>
     </PackageManagerTabs>
 
-    Now you should see confirmation in the terminal that Astro is running in dev mode. 🚀
+    Ahora deberías ver la confirmación en el terminal de que Astro se está ejecutando en modo dev. 🚀
 
-## View a preview of your website
+## Ver una vista previa de su sitio web
 
-Your project files contain all the code necessary to display an Astro website, but the browser is responsible for displaying your code as web pages.
+Tus archivos de proyecto contienen todo el código necesario para mostrar un sitio web Astro, pero el navegador es el responsable de mostrar tu código como páginas web.
 
-1. Click on the `localhost` link in your terminal window to see a live preview of your new Astro website! 
+1. Haz clic en el enlace `localhost` de tu ventana de terminal para ver una vista previa en directo de tu nuevo sitio web Astro. 
 
-    (Astro uses `http://localhost:3000` by default if port 3000 is available.)
+    (Astro utiliza `http://localhost:3000` por defecto si el puerto 3000 está disponible).
 
-    Here's what the Astro "Empty Project" starter website should look like in the browser preview:
+    Este es el aspecto que debería tener el sitio web de inicio del "Proyecto vacío" de Astro en la vista previa del navegador:
 
-    ![A blank white page with the word Astro at the top.](/tutorial/minimal.png)
+    ![Una página en blanco con la palabra Astro en la parte superior.](/tutorial/minimal.png)
 
-:::tip[Using the Astro dev server]
+:::tip[Uso del servidor de desarrollo Astro]
 
-While the Astro server is running in dev mode, you will NOT be able to run commands in your terminal window. Instead, this pane will give you feedback as you preview your site.
+Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en tu ventana de terminal. En su lugar, este panel le dará retroalimentación mientras previsualiza su sitio.
 
-You can stop the dev server at any time and return to the command prompt by typing <kbd>Ctrl + C</kbd> in the terminal.
+Puede detener el servidor de desarrollo en cualquier momento y volver al símbolo del sistema escribiendo <kbd>Ctrl + C</kbd> en el terminal.
 
-Sometimes the dev server will stop on its own while you are working. If your live preview stops working, go back to the terminal and restart the dev server by typing `npm run dev`.
+A veces el servidor de desarrollo se detendrá por sí mismo mientras estás trabajando. Si la vista previa en vivo deja de funcionar, vuelve al terminal y reinicia el servidor de desarrollo escribiendo `npm run dev`.
 :::
 
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I can create a new Astro project.
-- [ ] I can start the Astro dev server.
+- [ ] Puedo crear un nuevo proyecto Astro.
+- [ ] Puedo iniciar el servidor de desarrollo Astro.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- <p>[Getting Started with Visual Studio Code](https://code.visualstudio.com/docs/introvideos/basics) <Badge>external</Badge> — a video tutorial for installing, setting up and working with VS Code</p>
+- <p>[Introducción a Visual Studio Code](https://code.visualstudio.com/docs/introvideos/basics) <Badge>externo</Badge> — un tutorial en vídeo para instalar, configurar y trabajar con VS Code</p>
