--- a/src/content/docs/es/tutorial/1-setup/3.mdx
+++ b/src/content/docs/es/tutorial/1-setup/3.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Write your first line of Astro
+title: Escriba su primera línea de Astro
 description: |-
-  Tutorial: Build your first Astro blog —
-  Make your first edits to your tutorial project's home page
+  Tutorial: Crea tu primer blog Astro —
+  Realiza las primeras modificaciones en la página de inicio de tu proyecto tutorial
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -15,14 +15,14 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Make your first edit to your new website
+  - Realice la primera edición de su nuevo sitio web
 </PreCheck>
 
-## Edit your home page
+## Edite su página de inicio
 
-1. In your code editor, navigate in the Explorer file pane to `src/pages/index.astro` and click on it to open the file's contents in an editable tab.
+1. En su editor de código, navegue en el panel de archivos del Explorador hasta `src/pages/index.astro` y haga clic en él para abrir el contenido del archivo en una pestaña editable.
 
-    The contents of your `index.astro` file should look like this:
+    El contenido de su archivo `index.astro` debe tener este aspecto:
 
     ```astro title="src/pages/index.astro"
     ---
@@ -42,22 +42,22 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
     </html>
     ```
 
-2. Edit the content of your page `<body>`.
+2. Edite el contenido de su página `<body>`.
 
-    Type in the editor to change the heading text on your page and save the change.
+    Escriba en el editor para cambiar el texto del encabezado de su página y guarde el cambio.
 
     ```astro title="src/pages/index.astro" del={2} ins={3}
     <body>
       <h1>Astro</h1>
-      <h1>My Astro Site</h1>
+      <h1>Mi sitio Astro</h1>
     </body>
     ```
 
-3. Check the browser preview and you should see your page content updated to the new text.
+3. Compruebe la vista previa del navegador y debería ver el contenido de su página actualizado con el nuevo texto.
 
-Congratulations! You are now an Astro developer!
+¡Enhorabuena! Ya eres desarrollador Astro.
 
-The rest of this unit will set you up for success with version control and a published website you can show off.
+El resto de esta unidad te preparará para el éxito con el control de versiones y un sitio web publicado del que puedas presumir.
 
 
 
@@ -65,7 +65,7 @@ The rest of this unit will set you up for success with version control and a pub
 ## Checklist
 
 <Checklist>
-- [ ] I can make changes and see them in the browser.
-- [ ] I am an Astro developer!
+- [ ] Puedo hacer cambios y verlos en el navegador.
+- [ ] ¡Soy un desarrollador Astro!
 </Checklist>
 </Box>
