--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -1,12 +1,12 @@
 ---
 type: tutorial
-unitTitle: Create and deploy your first Astro site
-title: 'Check in: Unit 1 - Setup'
+unitTitle: Cree y despliegue su primer sitio Astro
+title: 'Check in: Unidad 1 - Configuración'
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Prepare your development environment, and create and deploy your first Astro
-  site
+  Prepare su entorno de desarrollo y cree y despliegue su primer sitio Astro
+  sitio
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -14,50 +14,50 @@ import Box from '~/components/tutorial/Box.astro';
 
 
 
-Now that you know what you're going to build, let's set up all the tools you'll need! 
+Ahora que ya sabes lo que vas a construir, vamos a preparar todas las herramientas que vas a necesitar. 
 
-This unit shows you how to set up your development environment and deploy to Netlify. Skip ahead to [Unit 2](/en/tutorial/2-pages/) if you are already comfortable with your environment and workflow.
+Esta unidad le muestra cómo configurar su entorno de desarrollo y desplegar en Netlify. Pase a la [Unidad 2](/es/tutorial/2-pages/) si ya se siente cómodo con su entorno y flujo de trabajo.
 
-:::tip[using stackblitz]
+:::tip[utilizando stackblitz]
 
-Want to complete this tutorial in an online code editor instead?
+¿Quieres completar este tutorial en un editor de código en línea en su lugar?
 <details>
-<summary>Follow these instructions, then go directly to Unit 2!</summary>
+<summary>Siga estas instrucciones y pase directamente a la Unidad 2.</summary>
 
-**Set up StackBlitz**
-1. Visit [astro.new](https://astro.new) and click the button to open the "Empty Project" template in StackBlitz. 
+**Configurar StackBlitz**
+1. Visite [astro.new](https://astro.new) y haga clic en el botón para abrir la plantilla "Proyecto vacío" en StackBlitz. 
 
-2. Click "Sign in" on the top right to log in using your GitHub credentials.
+2. Haz clic en "Iniciar sesión" en la parte superior derecha para iniciar sesión con tus credenciales de GitHub.
 
-3. In the upper left of the StackBlitz editor window, click to "fork" the template (save to your own account dashboard).
+3. En la parte superior izquierda de la ventana del editor StackBlitz, haga clic para hacer un "fork" de la plantilla (guardar en el panel de su propia cuenta).
 
-4. Wait for the project to load, and you will see a live preview of the "Empty Project" starter.
+4. Espere a que se cargue el proyecto y verá una vista previa en vivo del inicio del "Proyecto vacío".
 
-**Make a Change**
+**Haz un cambio**
 
-In the file pane, you should see `src/pages/index.astro`. Click to open it, and follow [Write your first line of Astro](/en/tutorial/1-setup/3/) to make a change to this file.
+En el panel de archivos, debería ver `src/pages/index.astro`. Haz clic para abrirlo, y sigue [Escribe tu primera línea de Astro](/es/tutorial/1-setup/3/) para hacer un cambio en este archivo.
 
-**Create a GitHub Repository**
+**Crear un repositorio GitHub**
 
-1. Press the <kbd>Connect Repository</kbd> button at the top of your list of files, enter a new name for your repository, and click <kbd>Create repo & push</kbd>. 
+1. Preciosa en el boton <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa una nombre para dicho repositorio y haz click en <kbd>Crear Repo & push</kbd>. 
 
-2. When you have changes to be committed back to GitHub, a "Commit" button will appear at the top left of your workspace. Clicking on this will allow you to enter a commit message, and update your repository.
+2. Cuando tengas cambios para confirmar en GitHub, aparecerá un botón "Confirmar" en la parte superior izquierda de tu espacio de trabajo. Al hacer clic en él, podrás introducir un mensaje de confirmación y actualizar tu repositorio.
 
-**Deploy your Site**
+**Despliegue su sitio**
 
-If you'd like to deploy to Netlify, skip to [Deploy your site to the web](/en/tutorial/1-setup/5/).
-Otherwise, skip to [Unit 2](/en/tutorial/2-pages/) to start building with Astro!
+Si quieres desplegar tu sitio en Netlify, pasa a [Despliega tu sitio en la web](/es/tutorial/1-setup/5/).
+¡Si no, pasa a [Unidad 2](/es/tutorial/2-pages/) para empezar a construir con Astro!
 
 </details>
 :::
 
-### Where are we going?
+### ¿Adónde vamos?
 
-In this unit, you will **create a new project** that is **stored online in GitHub** and **connected to Netlify**. 
+En esta unidad, **crearás un nuevo proyecto** que estará **almacenado online en GitHub** y **conectado a Netlify**. 
 
-As you write code, you will periodically commit your changes to GitHub. Netlify will use the files in your GitHub repository to build your website, and then publish it on the internet at a unique address where anyone can view it.
+A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicará en Internet en una dirección única donde cualquiera pueda verlo.
 
-Every time you commit a change to GitHub, a notification will be sent to Netlify. Then, Netlify will automatically rebuild and republish your live site to reflect those changes.
+Cada vez que envíes un cambio a GitHub, se enviará una notificación a Netlify. Entonces, Netlify automáticamente reconstruirá y volverá a publicar su sitio en vivo para reflejar esos cambios.
 
 
 
@@ -65,6 +65,6 @@ Every time you commit a change to GitHub, a notification will be sent to Netlify
 ## Checklist
 
 <Checklist>
-- [ ] Let's get set up for building an Astro project!
+- [ ] ¡Preparémonos para construir un proyecto Astro!
 </Checklist>
 </Box>
